--- a/mi-app/public/index.html
+++ b/mi-app/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>Mi App</title>
+    <title>Test psicologico</title>
     <!-- Incluir WebGazer -->
     <script src="https://cdn.jsdelivr.net/npm/webgazer@2.0.1/dist/webgazer.min.js"></script>
     <!-- Incluir Heatmap.js -->
